Fix Deployment Action #1

--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -24,7 +24,7 @@ jobs:
         with:
           channel: 'stable'
       - name: Build Website
-      - run: |
+        run: |
           flutter pub get
           flutter test
           flutter build web
