--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   go_router: ^3.0.1
   json_annotation: ^4.4.0
 
+  slide_countdown: ^0.1.1
+  google_fonts: ^2.3.1
+
 dev_dependencies:
   build_runner: ^2.1.7
   flutter_lints: ^1.0.0
