--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   slide_countdown: ^0.1.1
   google_fonts: ^2.3.1
   glassmorphism: ^3.0.0
+  flutter_countdown_timer: ^4.1.0
 
 dev_dependencies:
   build_runner: ^2.1.7
