--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,17 +27,17 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  auto_size_text: ^3.0.0
   cloud_firestore: ^3.1.7
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
-  go_router: ^3.0.1
-  json_annotation: ^4.4.0
-
-  slide_countdown: ^0.1.1
-  google_fonts: ^2.3.1
-  glassmorphism: ^3.0.0
   flutter_countdown_timer: ^4.1.0
+  glassmorphism: ^3.0.0
+  go_router: ^3.0.1
+  google_fonts: ^2.3.1
+  json_annotation: ^4.4.0
+  slide_countdown: ^0.1.1
 
 dev_dependencies:
   build_runner: ^2.1.7
