Enabled firebase operations

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,8 @@ dependencies:
   google_fonts: ^2.3.1
   json_annotation: ^4.4.0
   slide_countdown: ^0.1.1
+  url_launcher: ^6.0.20
+  validators: ^3.0.0
 
 dev_dependencies:
   build_runner: ^2.1.7
