--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   slide_countdown: ^0.1.1
   url_launcher: ^6.0.20
   validators: ^3.0.0
+  font_awesome_flutter: ^9.2.0
 
 dev_dependencies:
   build_runner: ^2.1.7
